# IVM

./: .rustfmt.toml  Cargo.toml  README.md
benches/: cmp_ivm_hvm.sh  cri_treesum.rs  iai_treesum.rs  mergesort.hvm  treesum.hvm  treesum.ivm  treesum.rs  treesum_generic.ivm
examples/: mergesort.ivm  sum.ivm
src/: error.rs  inet.rs  inet_program.rs  lexer.rs  lib.rs  main.rs  rule_book.rs  rule_map.rs  tests.rs  util.rs
src/parser/: ast.rs  display.rs  flatten.rs  mod.rs
