[package]
name = "ivm"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "cri_treesum"
harness = false

[[bench]]
name = "iai_treesum"
harness = false

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
debug = true
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[dependencies]
ariadne = "0.2.0"
chumsky = { version = "1.0.0-alpha.4", features = ["label"] }
color-eyre = { version = "0.6.2", default-features = false }
derive-new = "0.5.9"
hashbrown = "0.13.2"
itertools = "0.10.5"
logos = "0.12.0"
mimalloc-rust = "0.2.1"
# vec_map = "0.8.2"

[dev-dependencies]
criterion = "0.4"
iai = "0.1"
rand = "0.8.5"
